--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-
-pandas==2.1.0
-numpy==1.25.2
-scikit-learn==1.3.0
-torch==2.0.1
-transformers==4.31.0
-fastapi==0.103.1
-uvicorn==0.23.2
-pydantic==2.3.0
-regex==2023.8.8
-python-multipart==0.0.6
-nltk==3.8.1
-spacy==3.6.1
-joblib==1.3.2
+pandas>=1.3.0
+numpy>=1.21.0
+scikit-learn>=1.0.0
+torch>=1.9.0
+transformers>=4.11.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+pydantic>=1.8.0
+requests>=2.26.0
+joblib>=1.0.0
+python-multipart>=0.0.5
+python-dotenv>=0.19.0
