--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-pandas>=1.3.0
-numpy>=1.21.0
-scikit-learn>=1.0.0
-torch>=1.9.0
-transformers>=4.11.0
 fastapi>=0.68.0
 uvicorn>=0.15.0
-pydantic>=1.8.0
-requests>=2.26.0
-joblib>=1.0.0
-python-multipart>=0.0.5
+gradio>=3.0.0
+transformers>=4.30.0
+torch>=2.0.0
+scikit-learn>=1.0.0
+pandas>=1.3.0
+numpy>=1.21.0
 python-dotenv>=0.19.0
+pydantic>=1.8.0
+joblib>=1.0.0
