--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
-gradio>=3.0.0
-scikit-learn>=1.0.0
-pandas>=1.3.0
+gradio>=3.50.2
+scikit-learn>=1.0.2
 numpy>=1.21.0
+pandas>=1.3.0
+joblib>=1.1.0
+spacy>=3.0.0
 python-dotenv>=0.19.0
-joblib>=1.0.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
 regex>=2021.4.4
+pickle5>=0.0.11
+tqdm>=4.65.0
+torch>=2.0.0
+transformers>=4.30.0
+datasets>=2.12.0
